Adding Styles for Header and Team section

--- a/main.css
+++ b/main.css
@@ -1,3 +1,126 @@
 * {
   font-family: Roboto, "sans-serif";
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  text-decoration: none;
+}
+
+/*---------------------Header Styles---------------------*/
+
+header {
+  background-color: #1f2937;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.container {
+  padding: 15px 270px;
+}
+
+header nav .logo {
+  font-size: 24px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+header nav ul {
+  display: flex;
+  gap: 20px;
+}
+
+header nav ul li a:hover {
+  font-size: 23px;
+  font-weight: 400;
+}
+
+header nav ul li a {
+  font-size: 18px;
+  color: #e5e7eb;
+  font-weight: 300;
+}
+
+header .header-content {
+  display: flex;
+  flex-direction: row;
+  margin: 70px 0px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header .header-content .hero-container {
+  max-width: 550px;
+}
+
+header .header-content .hero-container h1 {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+header .header-content .hero-container p {
+  font-size: 18px;
+  color: #e5e7eb;
+  font-weight: 300;
+  max-width: 700px;
+  margin: 20px 0px;
+}
+
+header .header-content .hero-container button {
+  background-color: #3882f6;
+  border: none;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  padding: 13px;
+  border-radius: 6.5px;
+}
+
+header .header-content .hero-container button:hover {
+  background-color: #396ab9;
+  cursor: pointer;
+}
+
+header img {
+  background-size: cover;
+  max-width: 450px;
+}
+
+/*---------------------Info Styles---------------------*/
+
+.info .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.info .container .info-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.info .container .info-content .member {
+  text-align: center;
+}
+
+.info .container .info-content .member img {
+  background-image: cover;
+  width: 300px;
+  height: 300px;
+  border: #3882f6 solid 3px;
+  border-radius: 15px;
+}
+
+/* Needs to be fixed !!! - image size */
+
+.info .container .info-content .member p {
+  text-align: center;
+  font-size: 15px;
+  font-weight: 400;
 }
