--- a/main.css
+++ b/main.css
@@ -95,32 +95,102 @@ header img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px 0;
+  padding-top: 100px;
+  padding-bottom: 125px;
 }
 
 .info .container .info-content {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: 40px;
   margin: 20px 0;
+}
+
+.info .container h1 {
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
 .info .container .info-content .member {
   text-align: center;
+  max-width: 200px;
 }
 
 .info .container .info-content .member img {
   background-image: cover;
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   border: #3882f6 solid 3px;
   border-radius: 15px;
+  margin-bottom: 10px;
 }
 
 /* Needs to be fixed !!! - image size */
 
 .info .container .info-content .member p {
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
+  font-weight: 200;
+}
+
+/*---------------------Quote Styles---------------------*/
+
+.quote {
+  background-color: #e5e7eb;
+}
+
+.quote .container {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 200px;
+
+  padding-top: 125px;
+  padding-bottom: 125px;
+}
+
+.quote .container p {
+  color: #1f2937;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 200;
+}
+
+.quote .container p.name {
+  align-self: flex-end;
   font-weight: 400;
+}
+
+/*---------------------Signup Styles---------------------*/
+
+.signup .container .content {
+  background-color: #3882f6;
+  padding: 40px 80px;
+  border-radius: 10px;
+  color: #f9faf8;
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 250px;
+  align-items: center;
+}
+
+.signup .container .content button {
+  background-color: #3882f6;
+  color: #f9faf8;
+  border: #f9faf8 1px solid;
+  padding: 13px 20px;
+  font-size: 15px;
+  border-radius: 6px;
+}
+
+/*---------------------Signup Styles---------------------*/
+
+footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  text-align: center;
+}
+
+footer .container p {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
